--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.1",
     "emailjs-com": "^3.2.0",
-    "gh-pages": "^6.1.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.264.0",
     "react": "^18.2.0",
@@ -55,6 +54,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.1.1"
   }
 }
